--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -415,11 +415,15 @@ include("${PROJECT_SOURCE_DIR}/cmake/embed.cmake")
 add_library(threepp ${sources} ${privateHeaders} ${publicHeadersFull} "${generatedSourcesDir}/threepp/renderers/shaders/ShaderChunk.cpp")
 add_library(threepp::threepp ALIAS threepp)
 target_compile_features(threepp PUBLIC cxx_std_17)
-target_link_libraries(threepp
-        PRIVATE
-        glad::glad
-        glfw::glfw)
-if (UNIX)
+if (NOT DEFINED EMSCRIPTEN)
+    target_link_libraries(threepp
+            PRIVATE
+            glad::glad
+            glfw::glfw
+    )
+endif ()
+
+if (UNIX OR DEFINED EMSCRIPTEN)
     target_link_libraries(threepp PRIVATE pthread)
 endif ()
 target_include_directories(threepp
