--- a/examples/extras/core/CMakeLists.txt
+++ b/examples/extras/core/CMakeLists.txt
@@ -1,2 +1,4 @@
 
-add_example(NAME "fonts" TRY_LINK_IMGUI LINK_JSON)
+add_example(NAME "fonts" TRY_LINK_IMGUI LINK_JSON WEB WEB_EMBED
+    "../data/fonts@data/fonts"
+)
