--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,9 @@
 include(AddExample.cmake)
 include(LibConfig.cmake)
 
-add_example(NAME "demo" TRY_LINK_IMGUI WEB)
+add_example(NAME "demo" TRY_LINK_IMGUI WEB WEB_EMBED
+        "../data/fonts/helvetiker_bold.typeface.json@data/fonts/helvetiker_bold.typeface.json"
+)
 
 add_subdirectory(animation)
 add_subdirectory(audio)
