--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -1,11 +1,15 @@
 
-add_example(NAME "instancing" TRY_LINK_IMGUI WEB)
+add_example(NAME "instancing" TRY_LINK_IMGUI WEB WEB_EMBED
+        "../data/fonts@data/fonts"
+)
 if (TARGET "instancing")
     target_include_directories("instancing" PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
 endif ()
 
 add_example(NAME "sprite")
-add_example(NAME "lod" WEB)
+add_example(NAME "lod" WEBWEB_EMBED
+        "../data/fonts@data/fonts"
+)
 add_example(NAME "points" WEB)
 
 add_example(NAME "bones" LINK_IMGUI)
