Emscripten support for Crane3R

--- a/examples/projects/Crane3R/CMakeLists.txt
+++ b/examples/projects/Crane3R/CMakeLists.txt
@@ -1,5 +1,8 @@
 
-add_example(NAME "crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI)
+add_example(NAME "crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI WEB WEB_EMBED
+        "../data/fonts@data/fonts"
+        "../data/models/obj/Crane3R@data/models/obj/Crane3R"
+)
 if (TARGET "crane3R")
     target_include_directories("crane3R" PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
 endif ()
