--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,11 +2,15 @@
 
 include(CMakeFindDependencyMacro)
 
-find_dependency(glfw3 CONFIG)
-find_dependency(glad CONFIG)
+find_dependency(nlohmann_json CONFIG)
 
-if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
-    add_library(glfw::glfw ALIAS glfw)
+if (NOT DEFINED EMSCRIPTEN)
+    find_dependency(glfw3 CONFIG)
+    find_dependency(glad CONFIG)
+
+    if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
+        add_library(glfw::glfw ALIAS glfw)
+    endif()
 endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/threepp-targets.cmake)
