--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,6 +63,7 @@ set(publicHeaders
         "threepp/geometries/DecalGeometry.hpp"
         "threepp/geometries/EdgesGeometry.hpp"
         "threepp/geometries/ExtrudeGeometry.hpp"
+        "threepp/geometries/ExtrudeTextGeometry.hpp"
         "threepp/geometries/IcosahedronGeometry.hpp"
         "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/OctahedronGeometry.hpp"
@@ -280,6 +281,7 @@ set(sources
         "threepp/geometries/RingGeometry.cpp"
         "threepp/geometries/ShapeGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
+        "threepp/geometries/TextGeometry.cpp"
         "threepp/geometries/TorusGeometry.cpp"
         "threepp/geometries/TorusKnotGeometry.cpp"
         "threepp/geometries/TubeGeometry.cpp"
