embed a default font

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -438,9 +438,14 @@ endif ()
 
 include("${PROJECT_SOURCE_DIR}/cmake/embed.cmake")
 
-add_library(threepp ${sources} ${privateHeaders} ${publicHeadersFull} "${generatedSourcesDir}/threepp/renderers/shaders/ShaderChunk.cpp")
+list(APPEND sources
+        "${generatedSourcesDir}/threepp/EmbeddedFonts.cpp"
+        "${generatedSourcesDir}/threepp/renderers/shaders/ShaderChunk.cpp"
+)
+
+add_library(threepp ${sources} ${privateHeaders} ${publicHeadersFull})
 add_library(threepp::threepp ALIAS threepp)
-target_compile_features(threepp PUBLIC cxx_std_17)
+target_compile_features(threepp PUBLIC "cxx_std_17")
 if (NOT DEFINED EMSCRIPTEN)
     target_link_libraries(threepp
             PRIVATE
