Add Text2D and Text3D objects

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -156,6 +156,7 @@ set(publicHeaders
         "threepp/objects/Sprite.hpp"
         "threepp/objects/Points.hpp"
         "threepp/objects/Reflector.hpp"
+        "threepp/objects/Text.hpp"
         "threepp/objects/Water.hpp"
 
         "threepp/textures/DataTexture.hpp"
