--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,7 +2,7 @@
 
 include(CMakeFindDependencyMacro)
 
-if (NOT DEFINED EMSCRIPTEN)
+if (NOT DEFINED EMSCRIPTEN AND @THREEPP_WITH_GLFW@)
     find_dependency(glfw3 CONFIG)
 
     if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
