--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -407,12 +407,6 @@ set(sources
 
 )
 
-IF (NOT DEFINED EMSCRIPTEN)
-    list(APPEND sources
-            "external/glad/glad.c"
-    )
-endif ()
-
 if (THREEPP_WITH_SVG)
     list(APPEND publicHeaders
             "threepp/loaders/SVGLoader.hpp"
@@ -431,6 +425,22 @@ if (THREEPP_WITH_AUDIO)
 
     list(APPEND sources
             "threepp/audio/Audio.cpp"
+    )
+endif ()
+
+if (THREEPP_WITH_GLFW)
+    list(APPEND publicHeaders
+            "threepp/canvas/Canvas.hpp"
+    )
+
+    list(APPEND sources
+            "threepp/canvas/Canvas.cpp"
+    )
+endif ()
+
+if (NOT DEFINED EMSCRIPTEN)
+    list(APPEND sources
+            "external/glad/glad.c"
     )
 endif ()
 
@@ -455,31 +465,13 @@ target_include_directories(threepp
         PRIVATE
         "${generatedSourcesDir}"
         "${CMAKE_CURRENT_SOURCE_DIR}"
-        "${CMAKE_CURRENT_SOURCE_DIR}/external/glad"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/earcut"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/miniaudio"
+        "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/pugixml"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/quickhull"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/stb"
-        "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann"
 )
-
-if (THREEPP_WITH_GLFW)
-
-    add_library(threepp-glfw
-            "${publicHeaderDir}/threepp/canvas/Canvas.hpp"
-            "threepp/canvas/Canvas.cpp"
-    )
-    target_link_libraries(threepp-glfw
-            PUBLIC
-            threepp
-    )
-    target_include_directories(threepp-glfw
-            PRIVATE
-            "${generatedSourcesDir}"
-    )
-
-endif ()
 
 if (NOT DEFINED EMSCRIPTEN)
 
@@ -488,14 +480,11 @@ if (NOT DEFINED EMSCRIPTEN)
             "${CMAKE_CURRENT_SOURCE_DIR}/external/glad"
     )
 
-    target_include_directories(threepp-glfw
-            PRIVATE
-            "${CMAKE_CURRENT_SOURCE_DIR}/external/glad"
-    )
-
-    target_link_libraries(threepp-glfw
-            PRIVATE
-            glfw::glfw
-    )
+    if (THREEPP_WITH_GLFW)
+        target_link_libraries(threepp
+                PRIVATE
+                glfw::glfw
+        )
+    endif ()
 
 endif ()
