Decouple glfw (windowing) from core library (#211)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,6 @@ set(publicHeaders
         "threepp/constants.hpp"
         "threepp/threepp.hpp"
 
-        "threepp/canvas/Canvas.hpp"
         "threepp/canvas/WindowSize.hpp"
 
         "threepp/controls/FlyControls.hpp"
@@ -232,8 +231,6 @@ set(privateHeaders
 
 set(sources
 
-        "threepp/canvas/Canvas.cpp"
-
         "threepp/cameras/Camera.cpp"
         "threepp/cameras/PerspectiveCamera.cpp"
         "threepp/cameras/OrthographicCamera.cpp"
@@ -410,12 +407,6 @@ set(sources
 
 )
 
-IF (NOT DEFINED EMSCRIPTEN)
-    list(APPEND sources
-            "external/glad/glad.c"
-    )
-endif ()
-
 if (THREEPP_WITH_SVG)
     list(APPEND publicHeaders
             "threepp/loaders/SVGLoader.hpp"
@@ -437,6 +428,22 @@ if (THREEPP_WITH_AUDIO)
     )
 endif ()
 
+if (THREEPP_WITH_GLFW)
+    list(APPEND publicHeaders
+            "threepp/canvas/Canvas.hpp"
+    )
+
+    list(APPEND sources
+            "threepp/canvas/Canvas.cpp"
+    )
+endif ()
+
+if (NOT DEFINED EMSCRIPTEN)
+    list(APPEND sources
+            "external/glad/glad.c"
+    )
+endif ()
+
 include("${PROJECT_SOURCE_DIR}/cmake/embed.cmake")
 
 list(APPEND sources
@@ -447,12 +454,6 @@ list(APPEND sources
 add_library(threepp ${sources} ${privateHeaders} ${publicHeadersFull})
 add_library(threepp::threepp ALIAS threepp)
 target_compile_features(threepp PUBLIC "cxx_std_17")
-if (NOT DEFINED EMSCRIPTEN)
-    target_link_libraries(threepp
-            PRIVATE
-            glfw::glfw
-    )
-endif ()
 
 if (UNIX OR DEFINED EMSCRIPTEN)
     target_link_libraries(threepp PRIVATE pthread)
@@ -464,11 +465,26 @@ target_include_directories(threepp
         PRIVATE
         "${generatedSourcesDir}"
         "${CMAKE_CURRENT_SOURCE_DIR}"
-        "${CMAKE_CURRENT_SOURCE_DIR}/external/glad"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/earcut"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/miniaudio"
+        "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/pugixml"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/quickhull"
         "${CMAKE_CURRENT_SOURCE_DIR}/external/stb"
-        "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann"
 )
+
+if (NOT DEFINED EMSCRIPTEN)
+
+    target_include_directories(threepp
+            PRIVATE
+            "${CMAKE_CURRENT_SOURCE_DIR}/external/glad"
+    )
+
+    if (THREEPP_WITH_GLFW)
+        target_link_libraries(threepp
+                PRIVATE
+                glfw::glfw
+        )
+    endif ()
+
+endif ()
