--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -445,6 +445,9 @@ if (THREEPP_WITH_GLFW)
         set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
         set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
         set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+        set(GLFW_BUILD_X11 OFF CACHE BOOL "" FORCE)
+        set(GLFW_BUILD_COCOA OFF CACHE BOOL "" FORCE)
+        set(GLFW_BUILD_WAYLAND OFF CACHE BOOL "" FORCE)
         set(GLFW_LIBRARY_TYPE "OBJECT" CACHE STRING "" FORCE)
         add_subdirectory("external/glfw")
 
