--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Configure and build
         run: |
-          cmake . -B build -DCMAKE_BUILD_TYPE="Release"
+          cmake . -B build -DTHREEPP_USE_EXTERNAL_GLFW=ON -DCMAKE_BUILD_TYPE="Release"
           cmake --build build
 
       - name: Test
