Use cmake_dependent_option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,17 @@ project(threepp VERSION ${projectVersion})
 message("Current ${PROJECT_NAME} version: ${CMAKE_PROJECT_VERSION}\n")
 
 option(THREEPP_BUILD_EXAMPLES "Build examples" ON)
-option(THREEPP_BUILD_EXAMPLE_PROJECTS "Build example projects" OFF)
 option(THREEPP_BUILD_TESTS "Build test suite" ON)
 option(THREEPP_WITH_SVG "Build with SVGLoader" ON)
 option(THREEPP_WITH_AUDIO "Build with Audio" ON)
-option(THREEPP_WITH_GLFW "Build GLFW frontend" ON)
-option(THREEPP_USE_EXTERNAL_GLFW "Use externally supplied GLFW" OFF)
+
+# Force THREEPP_WITH_GLFW OFF when targeting EMSCRIPTEN
+cmake_dependent_option(THREEPP_WITH_GLFW "Build with GLFW frontend" ON "NOT DEFINED EMSCRIPTEN" OFF)
+# Force THREEPP_USE_EXTERNAL_GLFW OFF if NOT THREEPP_WITH_GLFW
+cmake_dependent_option(THREEPP_USE_EXTERNAL_GLFW "Use externally supplied GLFW" OFF "THREEPP_WITH_GLFW" OFF)
+# Force THREEPP_BUILD_EXAMPLE_PROJECTS OFF if NOT THREEPP_BUILD_EXAMPLES
+cmake_dependent_option(THREEPP_BUILD_EXAMPLE_PROJECTS "Build example projects" OFF "THREEPP_BUILD_EXAMPLES" OFF)
+
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
 
@@ -37,7 +42,7 @@ if (DEFINED EMSCRIPTEN)
     endif ()
 else ()
 
-    if (THREEPP_USE_EXTERNAL_GLFW AND THREEPP_WITH_GLFW)
+    if (THREEPP_USE_EXTERNAL_GLFW)
         find_package(glfw3 CONFIG REQUIRED)
 
         if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
