change how glad is loaded
Let GLRenderer load it if Canvas is not available

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -461,8 +461,12 @@ if (THREEPP_WITH_GLFW)
 endif ()
 
 if (NOT DEFINED EMSCRIPTEN)
+    list(APPEND privateHeaders
+            "threepp/utils/LoadGlad.hpp"
+    )
     list(APPEND sources
             "external/glad/glad.c"
+            "threepp/utils/LoadGlad.cpp"
     )
 endif ()
 
