force glfw under emscripten

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ option(THREEPP_BUILD_EXAMPLES "Build examples" ON)
 option(THREEPP_BUILD_TESTS "Build test suite" ON)
 option(THREEPP_WITH_SVG "Build with SVGLoader" ON)
 option(THREEPP_WITH_AUDIO "Build with Audio" ON)
-option(THREEPP_WITH_GLFW "Build with GLFW frontend" ON)
 
+# Force THREEPP_WITH_GLFW ON when targeting Emscripten
+cmake_dependent_option(THREEPP_WITH_GLFW "Build with GLFW frontend" ON " NOT DEFINED EMSCRIPTEN" ON)
 # Force THREEPP_USE_EXTERNAL_GLFW OFF if NOT THREEPP_WITH_GLFW
 cmake_dependent_option(THREEPP_USE_EXTERNAL_GLFW "Use externally supplied GLFW" OFF "THREEPP_WITH_GLFW" OFF)
 # Force THREEPP_BUILD_EXAMPLE_PROJECTS OFF if NOT THREEPP_BUILD_EXAMPLES
