--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -445,9 +445,13 @@ if (THREEPP_WITH_GLFW)
         set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
         set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
         set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
-        set(GLFW_BUILD_X11 OFF CACHE BOOL "" FORCE)
         set(GLFW_BUILD_COCOA OFF CACHE BOOL "" FORCE)
         set(GLFW_BUILD_WAYLAND OFF CACHE BOOL "" FORCE)
+        if (THREEPP_EMBEDDED_GLFW_WITH_X11)
+            set(GLFW_BUILD_X11 ON CACHE BOOL "" FORCE)
+        else()
+            set(GLFW_BUILD_X11 OFF CACHE BOOL "" FORCE)
+        endif ()
         set(GLFW_LIBRARY_TYPE "OBJECT" CACHE STRING "" FORCE)
         add_subdirectory("external/glfw")
 
