Remove option THREEPP_BUILD_EXAMPLE_PROJECTS
always build

--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -1,14 +1,5 @@
 
-if (THREEPP_BUILD_EXAMPLE_PROJECTS)
-
-    add_subdirectory(snake)
-    add_subdirectory(Crane3R)
-    add_subdirectory(MotorControl)
-
-    if (assimp_FOUND)
-        add_subdirectory(Youbot)
-    endif ()
-
-else ()
-    message(AUTHOR_WARNING "Building examples, but NOT example projects. Re-run with -DTHREEPP_BUILD_EXAMPLE_PROJECTS=ON to change this behaviour.")
-endif ()
+add_subdirectory(Crane3R)
+add_subdirectory(MotorControl)
+add_subdirectory(Snake)
+add_subdirectory(Youbot)
