wip inverted pendulum

--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_subdirectory(Crane3R)
+add_subdirectory(InvertedPendulum)
 add_subdirectory(MotorControl)
 add_subdirectory(Snake)
 add_subdirectory(Youbot)
