Add particle system (#228)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -149,6 +149,7 @@ set(publicHeaders
         "threepp/objects/LOD.hpp"
         "threepp/objects/Mesh.hpp"
         "threepp/objects/ObjectWithMorphTargetInfluences.hpp"
+        "threepp/objects/ParticleSystem.hpp"
         "threepp/objects/Sky.hpp"
         "threepp/objects/Skeleton.hpp"
         "threepp/objects/SkinnedMesh.hpp"
@@ -365,6 +366,7 @@ set(sources
         "threepp/objects/LOD.cpp"
         "threepp/objects/InstancedMesh.cpp"
         "threepp/objects/Mesh.cpp"
+        "threepp/objects/ParticleSystem.cpp"
         "threepp/objects/Points.cpp"
         "threepp/objects/Skeleton.cpp"
         "threepp/objects/SkinnedMesh.cpp"
