Fix case sensitive path

--- a/examples/projects/Pathfinding/CMakeLists.txt
+++ b/examples/projects/Pathfinding/CMakeLists.txt
@@ -4,7 +4,7 @@ set(headers
         "${CMAKE_CURRENT_SOURCE_DIR}/GameMap.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/Heuristic.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/Path.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/Pathfinder.hpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/PathFinder.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/TileBasedMap.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/astar/AStar.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ClosestHeuristic.hpp"
