minor adjustments [skip ci]

--- a/examples/projects/Pathfinding/CMakeLists.txt
+++ b/examples/projects/Pathfinding/CMakeLists.txt
@@ -12,4 +12,5 @@ set(headers
         "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ManhattanHeuristic.hpp"
 )
 
-add_example(NAME Pathfinding SOURCES main.cpp ${headers})
+add_example(NAME "Pathfinding" SOURCES main.cpp ${headers})
+target_include_directories(Pathfinding PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
