--- a/examples/projects/Pathfinding/CMakeLists.txt
+++ b/examples/projects/Pathfinding/CMakeLists.txt
@@ -6,7 +6,7 @@ set(headers
         "${CMAKE_CURRENT_SOURCE_DIR}/Path.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/PathFinder.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/TileBasedMap.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/astar/AStar.hpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/algorithm/AStar.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ClosestHeuristic.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ClosestSquaredHeuristic.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ManhattanHeuristic.hpp"
