refactor setup for example libs

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,8 @@
 include(AddExample.cmake)
 include(LibConfig.cmake)
 
+add_subdirectory(libs)
+
 add_example(NAME "demo" TRY_LINK_IMGUI WEB WEB_EMBED
         "../data/fonts@data/fonts"
 )
