--- a/examples/projects/Pathfinding/CMakeLists.txt
+++ b/examples/projects/Pathfinding/CMakeLists.txt
@@ -1,18 +1,9 @@
 
 set(headers
-        "${CMAKE_CURRENT_SOURCE_DIR}/Coordinate.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/GameMap.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/Heuristic.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/Path.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/PathFinder.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/TileBasedMap.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/algorithm/AStar.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ClosestHeuristic.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ClosestSquaredHeuristic.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/heuristics/ManhattanHeuristic.hpp"
 )
 
 add_example(NAME "Pathfinding" SOURCES main.cpp ${headers})
 if (TARGET "Pathfinding")
-    target_include_directories(Pathfinding PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+    target_link_libraries("Pathfinding" PRIVATE pathfinding)
 endif ()
