--- a/examples/projects/Crane3R/CMakeLists.txt
+++ b/examples/projects/Crane3R/CMakeLists.txt
@@ -4,5 +4,5 @@ add_example(NAME "crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI WEB WEB_E
         "../data/models/obj/Crane3R@data/models/obj/Crane3R"
 )
 if (TARGET "crane3R")
-    target_include_directories("crane3R" PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
+    target_link_libraries("crane3R" PRIVATE kine)
 endif ()
