refactor materials handling

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -150,6 +150,7 @@ set(publicHeaders
         "threepp/objects/LineSegments.hpp"
         "threepp/objects/LOD.hpp"
         "threepp/objects/Mesh.hpp"
+        "threepp/objects/ObjectWithMaterials.hpp"
         "threepp/objects/ObjectWithMorphTargetInfluences.hpp"
         "threepp/objects/ParticleSystem.hpp"
         "threepp/objects/Sky.hpp"
@@ -371,6 +372,7 @@ set(sources
         "threepp/objects/LOD.cpp"
         "threepp/objects/InstancedMesh.cpp"
         "threepp/objects/Mesh.cpp"
+        "threepp/objects/ObjectWithMaterials.cpp"
         "threepp/objects/ParticleSystem.cpp"
         "threepp/objects/Points.cpp"
         "threepp/objects/Skeleton.cpp"
